--- a/lib/client/app/loading.html
+++ b/lib/client/app/loading.html
@@ -14,7 +14,7 @@
 
         <div layout="row" layout-align="center center">
             <div flex="80" flex-sm="60" flex-gt-sm="40" style="margin-top: 64px; text-align: center;">
-                <img style="width: 40px; height: auto;" src="media/logo-box-white" ng-cloak="true">
+                <img style="width: 40px; height: auto;" src="media/logo-box-white.png" ng-cloak="true">
             </div>
         </div>
 
