--- a/lib/client/app/loading.html
+++ b/lib/client/app/loading.html
@@ -5,16 +5,27 @@
 .loading_page.ng-hide {
     opacity: 0;
 }
+#loading {
+        -webkit-animation: rotation 2s infinite linear;
+}
 
+@-webkit-keyframes rotation {
+        from {
+                -webkit-transform: rotate(0deg);
+        }
+        to {
+                -webkit-transform: rotate(359deg);
+        }
+}
 </style>
 
-<md-content class="loading_page" id="load_page" style="position: fixed; width: 100%; height: 100%; background-color: #BDBDBD; z-index:20000; top: 0; left: 0; text-align: center;">
+<md-content class="loading_page" id="load_page" style="position: fixed; width: 100%; height: 100%; background-color: #212121; z-index:20000; top: 0; left: 0; text-align: center;">
     
     <section ng-cloak style="height: 100%;" layout="row" layout-align="center center">
 
         <div layout="row" layout-align="center center">
             <div flex="80" flex-sm="60" flex-gt-sm="40" style="margin-top: 64px; text-align: center;">
-                <img style="width: 40px; height: auto;" src="media/logo-box-white.png" ng-cloak="true">
+                <img id="loading" style="width: 60px; height: auto;" src="media/logo-box-white.png" ng-cloak="true">
             </div>
         </div>
 
