--- a/lib/client/app/loading.html
+++ b/lib/client/app/loading.html
@@ -35,7 +35,7 @@
 
     </section>
 
-    <img content-available src="media/logo.png" style="width: 0; height: 0">
+    <!-- <img content-available src="media/logo.png" style="width: 0; height: 0"> -->
 
 </md-content>
 <!-- Page Loading  -->
