--- a/lib/client/app/loading.html
+++ b/lib/client/app/loading.html
@@ -7,8 +7,9 @@
 }
 #loading {
         will-change: transform;
-        animation: roll 3s infinite;
-        -webkit-animation: roll 2s infinite;
+        -webkit-animation: rotation 3s infinite;
+        transform: rotate(30deg);
+        -webkit-transform: rotate(30deg);
 }
 
 @-webkit-keyframes rotation {
