--- a/lib/client/app/loading.html
+++ b/lib/client/app/loading.html
@@ -36,7 +36,7 @@
 
     </section>
 
-    <img content-available src="media/logo.png" style="width: 0; height: 0">
+    <img content-available src="https://storage.googleapis.com/mma-texas.appspot.com/media/images/MMA_Full Name_WhiteBack_BlackL_GreenBar_BlackImage no services.png" style="width: 0; height: 0; display: none;">
 
 </md-content>
 <!-- Page Loading  -->
