times hour settings

--- a/lib/client/app/application/global/dialogs/settings.html
+++ b/lib/client/app/application/global/dialogs/settings.html
@@ -159,8 +159,8 @@
                                 <label>Sunday Open</label>
                                 <md-select ng-model="settings.data.hours.sunday.start">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -170,8 +170,8 @@
                                 <label>Sunday Close</label>
                                 <md-select ng-model="settings.data.hours.sunday.end">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -181,8 +181,8 @@
                                 <label>Monday Open</label>
                                 <md-select ng-model="settings.data.hours.monday.start">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -192,8 +192,8 @@
                                 <label>Monday Close</label>
                                 <md-select ng-model="settings.data.hours.monday.end">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -203,8 +203,8 @@
                                 <label>Tuesday Open</label>
                                 <md-select ng-model="settings.data.hours.tuesday.start">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -214,8 +214,8 @@
                                 <label>Tuesday Close</label>
                                 <md-select ng-model="settings.data.hours.tuesday.end">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -225,8 +225,8 @@
                                 <label>Wednesday Open</label>
                                 <md-select ng-model="settings.data.hours.wednesday.start">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -236,8 +236,8 @@
                                 <label>Wednesday Close</label>
                                 <md-select ng-model="settings.data.hours.wednesday.end">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -247,8 +247,8 @@
                                 <label>Thursday Open</label>
                                 <md-select ng-model="settings.data.hours.thursday.start">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -258,8 +258,8 @@
                                 <label>Thursday Close</label>
                                 <md-select ng-model="settings.data.hours.thursday.end">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -269,8 +269,8 @@
                                 <label>Friday Open</label>
                                 <md-select ng-model="settings.data.hours.friday.start">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -280,8 +280,8 @@
                                 <label>Friday Close</label>
                                 <md-select ng-model="settings.data.hours.friday.end">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -291,8 +291,8 @@
                                 <label>Saturday Open</label>
                                 <md-select ng-model="settings.data.hours.saturday.start">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
@@ -302,8 +302,8 @@
                                 <label>Saturday Close</label>
                                 <md-select ng-model="settings.data.hours.saturday.end">
                                     <md-option><em>Closed</em></md-option>
-                                    <md-option ng-repeat="time in times" ng-value="time.hour">
-                                        {{time.hour}}
+                                    <md-option ng-repeat="time in times" ng-value="time">
+                                        {{time}}
                                     </md-option>
                                 </md-select>
                             </md-input-container>
