--- a/lib/client/app/index.html
+++ b/lib/client/app/index.html
@@ -121,6 +121,7 @@
 
         <!-- myVault -->
         <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/share.html'"></div>
+        <div ng-if="me.security.roles == 'management'" ng-include src="'application/global/dialogs/iframeUpload.html'"></div>
         <!-- myVault -->
 
         <!-- settings -->
