open iframe upload

--- a/lib/client/app/application/global/dialogs/iframeUpload.html
+++ b/lib/client/app/application/global/dialogs/iframeUpload.html
@@ -48,7 +48,7 @@
         <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="closeIframeUpload()" style="position: absolute; bottom: -26px; right: 64px; background-color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
         </md-button>
-        <md-button class="md-fab md-mini" aria-label="upload iframe" ng-click="uploadIframeResource(iframe)" style="position: absolute; bottom: -26px; right: 16px; background-color: {{base_hue_lightest.value}}!important;">
+        <md-button class="md-fab md-mini" aria-label="upload iframe" ng-click="uploadIframeResource(me, iframe)" style="position: absolute; bottom: -26px; right: 16px; background-color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">Upload</md-icon>
         </md-button>
     </md-card>
