--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -48,7 +48,7 @@
                         </md-button>
                     </md-menu-item>
                     <md-menu-item>
-                        <md-button ng-click="uploadIframeResource(me, iframe)">
+                        <md-button ng-click="openIframeUpload()">
                             Iframe
                         </md-button>
                     </md-menu-item>
