--- a/lib/client/app/application/global/dialogs/iframeUpload.html
+++ b/lib/client/app/application/global/dialogs/iframeUpload.html
@@ -17,21 +17,21 @@
             <md-content flex>
                 <div layout="row" layout-align="start start" flex>
 
-                    <md-list-item flex="100">
+                    <md-list-item style="width: 100%;">
                         <md-input-container class="md-block lightweight-md-input">
                             <label>Resource Title</label>
                             <input ng-model="iframe.source">
                         </md-input-container>
                     </md-list-item>
                     
-                    <md-list-item flex="100">
+                    <md-list-item style="width: 100%;">
                         <md-input-container class="md-block lightweight-md-input">
                             <label>Resource Link</label>
                             <input ng-model="iframe.source">
                         </md-input-container>
                     </md-list-item>
 
-                    <md-list-item flex="100">
+                    <md-list-item style="width: 100%;">
                         <md-input-container class="md-block lightweight-md-dropdown">
                             <label>Share Resource</label>
                             <md-select multiple ng-model="iframe.share">
