--- a/lib/client/app/application/global/dialogs/iframeUpload.html
+++ b/lib/client/app/application/global/dialogs/iframeUpload.html
@@ -49,7 +49,7 @@
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
         </md-button>
         <md-button class="md-fab md-mini" aria-label="upload iframe" ng-click="uploadIframeResource(me, iframe)" style="position: absolute; bottom: -26px; right: 16px; background-color: {{base_hue_lightest.value}}!important;">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">Upload</md-icon>
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">backup</md-icon>
         </md-button>
     </md-card>
 </div>
