--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -189,13 +189,28 @@
                                                         <div layout="column" layout-align="center stretch" style="margin: 0" flex>
                                                             <md-list class="md-dense" flex>
                                                                 <md-list-item ng-repeat="file in me.files" class="md-2-line" flex>
-                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_download</md-icon>
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">{{file.name}}</h3>
                                                                     </div>
-                                                                    <md-button class="md-secondary md-icon-button" ng-click="openShare(file)">
-                                                                        <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
-                                                                    </md-button>
+                                                                    <md-menu>
+                                                                        <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
+                                                                            <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">more_vert</md-icon>
+                                                                        </md-button>
+                                                                        <md-menu-content width="4">
+                                                                            <md-menu-item>
+                                                                                <md-button ng-click="openShare(file)">
+                                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">share</md-icon>
+                                                                                    Share With Users
+                                                                                </md-button>
+                                                                            </md-menu-item>
+                                                                            <md-menu-item>
+                                                                                <md-button>
+                                                                                    <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Add Content Icon" md-font-library="material-icons">cloud_download</md-icon>
+                                                                                    Download Resource
+                                                                                </md-button>
+                                                                            </md-menu-item>
+                                                                        </md-menu-content>
+                                                                    </md-menu>
                                                                 </md-list-item>
                                                             </md-list>
                                                             <md-list ng-if="!me.files" class="md-dense" flex>
