--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -192,8 +192,8 @@
                                                                     <div class="md-list-item-text">
                                                                         <h3 style="font-size: 16px;">{{file.name}}</h3>
                                                                     </div>
-                                                                    <md-menu>
-                                                                        <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;">
+                                                                    <md-menu class="md-secondary">
+                                                                        <md-button md-menu-origin ng-click="openMenu($mdMenu, $event)" class="md-fab md-mini" aria-label="open options" style=" background-color: {{base_hue_lightest.value}}!important;">
                                                                             <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Open Options Menu" md-font-library="material-icons">more_vert</md-icon>
                                                                         </md-button>
                                                                         <md-menu-content width="4">
