--- a/lib/client/app/application/global/dialogs/iframeUpload.html
+++ b/lib/client/app/application/global/dialogs/iframeUpload.html
@@ -15,7 +15,7 @@
         </md-card-header>
         <md-card-content flex>
             <md-content flex>
-                <div layout="row" layout-align="start start" flex>
+                <div layout="column" layout-align="start start" flex>
 
                     <md-list-item style="width: 100%;">
                         <md-input-container class="md-block lightweight-md-input">
