--- a/lib/client/app/application/global/dialogs/iframeUpload.html
+++ b/lib/client/app/application/global/dialogs/iframeUpload.html
@@ -20,7 +20,7 @@
                     <md-list-item style="width: 100%;">
                         <md-input-container class="md-block lightweight-md-input">
                             <label>Resource Title</label>
-                            <input ng-model="iframe.source">
+                            <input ng-model="iframe.title">
                         </md-input-container>
                     </md-list-item>
                     
