--- a/lib/client/app/application/global/dialogs/share.html
+++ b/lib/client/app/application/global/dialogs/share.html
@@ -30,11 +30,11 @@
                 </div>
             </md-content>
         </md-card-content>
-        <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="closeShare()" style="position: absolute; bottom: -26px; right: 64px; background-color: {{base_hue_lightest.value}}!important;">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
+        <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="closeShare()" style="position: absolute; bottom: -26px; right: 64px; background-color: {{primary_hue_normal.value}}!important;">
+                <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">close</md-icon>
         </md-button>
-        <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="position: absolute; bottom: -26px; right: 16px; background-color: {{base_hue_lightest.value}}!important;">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">share</md-icon>
+        <md-button class="md-fab md-mini" aria-label="upload media" md-menu-origin ng-click="openMenu($mdMenu, $event)" style="position: absolute; bottom: -26px; right: 16px; background-color: {{primary_hue_normal.value}}!important;">
+                <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">share</md-icon>
         </md-button>
     </md-card>
 </div>
