--- a/lib/client/app/application/global/dialogs/tasksDetail.html
+++ b/lib/client/app/application/global/dialogs/tasksDetail.html
@@ -169,16 +169,16 @@
                                                 <md-option ng-value="'onCreate'">
                                                     Once Created
                                                 </md-option>
-                                                <md-option ng-value="'Daily'">
+                                                <md-option ng-value="'daily'">
                                                     Daily
                                                 </md-option>
-                                                <md-option ng-value="'Weekly'">
+                                                <md-option ng-value="'weekly'">
                                                     Weekly
                                                 </md-option>
-                                                <md-option ng-value="'Bi-weekly'">
+                                                <md-option ng-value="'bi-weekly'">
                                                     Bi-Weekly
                                                 </md-option>
-                                                <md-option ng-value="'Monthly'">
+                                                <md-option ng-value="'monthly'">
                                                     Monthly
                                                 </md-option>
                                             </md-select>
