--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -248,16 +248,16 @@
                                                         <md-option ng-value="'onCreate'">
                                                             Once Created
                                                         </md-option>
-                                                        <md-option ng-value="'Daily'">
+                                                        <md-option ng-value="'daily'">
                                                             Daily
                                                         </md-option>
-                                                        <md-option ng-value="'Weekly'">
+                                                        <md-option ng-value="'weekly'">
                                                             Weekly
                                                         </md-option>
-                                                        <md-option ng-value="'Bi-weekly'">
+                                                        <md-option ng-value="'bi-weekly'">
                                                             Bi-Weekly
                                                         </md-option>
-                                                        <md-option ng-value="'Monthly'">
+                                                        <md-option ng-value="'monthly'">
                                                             Monthly
                                                         </md-option>
                                                     </md-select>
@@ -294,23 +294,14 @@
                                                 </md-input-container>
                                             </md-list-item>
                                             <md-list-item>
-                                                <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
+                                                <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="100">
                                                     <label>Hour</label>
                                                     <md-select ng-model="taskAddObj.runTimeHour" ng-required="true">
-                                                        <md-option ng-repeat="time in times" ng-value="time">
+                                                        <md-option ng-repeat="time in timesSans" ng-value="time">
                                                             {{time}}
                                                         </md-option>
                                                     </md-select>
-                                                </md-input-container>
-                                                <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="50">
-                                                    <label>Meridiem</label>
-                                                    <md-select ng-model="taskAddObj.runTimeMeridiem" ng-required="true">
-                                                        <md-option><em>None</em></md-option>
-                                                        <md-option ng-repeat="meridiem in meridiems" ng-value="meridiem">
-                                                            {{meridiem}}
-                                                        </md-option>
-                                                    </md-select>
-                                                </md-input-container>
+                                                </md-input-container>                                                
                                             </md-list-item>
                                         </span>
                                     </span>                                 
