--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -296,7 +296,7 @@
                                             <md-list-item>
                                                 <md-input-container class="md-block lightweight-md-input" flex="100" flex-sm="100" flex-gt-sm="100">
                                                     <label>Hour</label>
-                                                    <md-select ng-model="taskAddObj.runTimeHour" ng-required="true">
+                                                    <md-select ng-model="taskAddObj.runTime" ng-required="true">
                                                         <md-option ng-repeat="time in timesSans" ng-value="time">
                                                             {{time}}
                                                         </md-option>
